alt post overflow issue fixed

--- a/style/style.scss
+++ b/style/style.scss
@@ -137,14 +137,14 @@ body{
 
             .content-section {
                 grid-area: content-section;
-                background: #000;
                 height: 100%;
                 // border: 1px solid #eec0c0;
 
                 .latest-post-section{
                     width: 100%;
-                    height: 20em;
+                    height: 22em;
                     background-color: #fff;
+                    padding-bottom: 1em;
 
                     display: grid;
                     grid-template-columns: 50% 50%;
@@ -222,7 +222,7 @@ body{
                         grid-template-rows: 50% 50%;
                         overflow: hidden;
                         padding: 5px 3px;
-                        grid-row-gap: 10px;
+                        grid-row-gap: 1px;
 
 
 
